@@ -260,3 +260,15 @@ numbers.must_be.sorted(:as => sorted_numbers, :order => order)
 
 The variant without @:as@ and @:order@ supports reification and negation, the 
 other variations support neither.
+
+h2. Tuple
+
+The tuple constraints can be used to constraint arrays of integer variable to 
+only take values in a specified set of tuples.
+
+<ruby>
+numbers.must_be.in [[1,7], [47,11]]
+</ruby>
+
+The above constrains @numbers@, containing two integer variables, to either 
+have values 1 and 7, or values 47 and 11 respectively.
