@@ -35,3 +35,4 @@ require 'gecoder/interface/constraints/int_enum/element'
 require 'gecoder/interface/constraints/int_enum/count'
 require 'gecoder/interface/constraints/int_enum/sort'
 require 'gecoder/interface/constraints/int_enum/arithmetic'
+require 'gecoder/interface/constraints/int_enum/extensional'
