@@ -4,6 +4,7 @@
 * Fixed the "raw_bindings" and "sudoku-set" examples, which were broken by the 0.8.0 release.
 * Integers can now be used to specify singleton lower and upper bounds when creating set variables. 
 * Added convenience methods Model#maximize! and Model#minimize! for optimizing single variables.
+* Added tuple constraint for enumerations of integer variables.
 
 == Version 0.8.0
 This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
